--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,6 @@
 server.port=8082
 
+
 ### DATABASE ###
 spring.datasource.url=jdbc:mysql://localhost:3306/DevopsProject?createDatabaseIfNotExist=true
 spring.datasource.username=root
@@ -9,3 +10,6 @@ spring.datasource.password=
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.database-platform=org.hibernate.dialect.MySQL5Dialect
+
+management.endpoint.metrics.enabled=true
+management.endpoints.web.exposure.include=*
