--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,37 +1,37 @@
-#version: "3"
-#
-#services:
-#  mysqldb:
-#    container_name: mysql8
-#    image: mysql
-#    restart: always
-#    volumes:
-#      - db:/var/lib/mysql
-#    ports:
-#      - "3306:3306"
-#    environment:
-#      MYSQL_DATABASE: "devops"
-#      MYSQL_ROOT_PASSWORD: "root"
-#    networks:
-#      - mynetwork
-#  app:
-#    depends_on:
-#      - mysqldb
-#    image: devopsimage
-#    restart: always
-#    ports:
-#      - "8082:8082"
-#    environment:
-#      spring.datasource.url: "jdbc:mysql://mysql8:3306/devops?useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC&createDatabaseIfNotExist=true"
-#      MYSQL_HOST: "mysql8"
-#      MYSQL_USER: "root"
-#      MYSQL_PASSWORD: "root"
-#    networks:
-#      - mynetwork
-#
-#networks:
-#  mynetwork:
-#    driver: bridge
-#
-#volumes:
-#  db:
+version: "3"
+
+services:
+  mysqldb:
+    container_name: mysql8
+    image: mysql
+    restart: always
+    volumes:
+      - db:/var/lib/mysql
+    ports:
+      - "3306:3306"
+    environment:
+      MYSQL_DATABASE: "devops"
+      MYSQL_ROOT_PASSWORD: ""
+    networks:
+      - mynetwork
+  app:
+    depends_on:
+      - mysqldb
+    image: devopsprojectimage
+    restart: always
+    ports:
+      - "8082:8082"
+    environment:
+      spring.datasource.url: "jdbc:mysql://mysql8:3306/devops?useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC&createDatabaseIfNotExist=true"
+      MYSQL_HOST: "mysql8"
+      MYSQL_USER: "root"
+      MYSQL_PASSWORD: ""
+    networks:
+      - mynetwork
+
+networks:
+  mynetwork:
+    driver: bridge
+
+volumes:
+  db:
