--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,15 +1,3 @@
-server.port=8082
-
-
-### DATABASE ###
-spring.datasource.url=jdbc:mysql://localhost:3306/DevopsProject?createDatabaseIfNotExist=true
-spring.datasource.username=root
-spring.datasource.password=
-
-### JPA / HIBERNATE ###
-spring.jpa.show-sql=true
-spring.jpa.hibernate.ddl-auto=update
-spring.jpa.database-platform=org.hibernate.dialect.MySQL5Dialect
-
+spring.profiles.default=dev
 management.endpoint.metrics.enabled=true
 management.endpoints.web.exposure.include=*
