--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,7 +11,7 @@ services:
       - "3306:3306"
     environment:
       MYSQL_DATABASE: "devops"
-      MYSQL_ROOT_PASSWORD: ""
+      MYSQL_ROOT_PASSWORD: "root"
     networks:
       - mynetwork
   app:
@@ -25,7 +25,7 @@ services:
       spring.datasource.url: "jdbc:mysql://mysql8:3306/devops?useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC&createDatabaseIfNotExist=true"
       MYSQL_HOST: "mysql8"
       MYSQL_USER: "root"
-      MYSQL_PASSWORD: ""
+      MYSQL_PASSWORD: "root"
     networks:
       - mynetwork
 
