--- a/src/main/resources/application-test.properties
+++ b/src/main/resources/application-test.properties
@@ -2,7 +2,7 @@ server.port=8082
 ### DATABASE ###
 spring.datasource.url=jdbc:mysql://172.17.0.4:3306/devops?createDatabaseIfNotExist=true
 spring.datasource.username=root
-spring.datasource.password=root
+spring.datasource.password=
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 
 
